# statescale

./: .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml  upload-codecov.yml
docs/: api.rst  conf.py  index.rst  snapsy.rst
docs/api/: kernels.rst  model.rst
examples/: ex01_usage.py
src/snapsy/: __init__.py  evaluate.py  model.py  surrogate.py  typing.py
src/statescale/: __init__.py  _containers.py  _evaluate.py  _snapshot.py  evaluate.py  models.py  snapshot.py  surrogate.py
src/statescale/kernels/: __init__.py  griddata.py  surrogate.py
tests/: model.npy  test_felupe_view.py  test_model.py  test_snapshot_model.py
